--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1724,7 +1724,7 @@ a:hover {
   #cb-a, .home #cb-a, .blog #cb-a {
     height: 500px;
     width: 820px !important;
-    background-position: -319px -69px !important !important;
+    background-position: -319px -69px !important;
     background-size: contain !important;
   }
 }
