--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -575,7 +575,7 @@ $thumb_hover: $red;
     }
     @include max_phone {
         width: 490px !important;
-        background-position: -111px -60px !important;
+        background-position: -176px -110px !important;//-111px -60px !important;
     }
 }
 
