black arrows in thumbs, duh

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1316,13 +1316,19 @@ a:hover {
 .thumbnail i {
   color: #bf7485;
 }
-/* line 243, ../scss/custom.scss */
+@media only all and (max-width: 767px) {
+  /* line 240, ../scss/custom.scss */
+  .thumbnail i {
+    color: black;
+  }
+}
+/* line 246, ../scss/custom.scss */
 .thumbnail .caption {
   text-align: center;
   padding: 10px 0 0 0;
 }
 @media only all and (min-width: 768px) {
-  /* line 252, ../scss/custom.scss */
+  /* line 255, ../scss/custom.scss */
   .thumbnail:hover img, .thumbnail:focus img {
     border: 3px dotted #b12e4f;
     border-bottom: 3px dotted #b12e4f;
@@ -1336,7 +1342,7 @@ a:hover {
     -o-transition: opacity, 0.5s;
     transition: opacity, 0.5s;
   }
-  /* line 262, ../scss/custom.scss */
+  /* line 265, ../scss/custom.scss */
   .thumbnail:hover h3, .thumbnail:focus h3 {
     background: #b12e4f;
     color: white;
@@ -1350,29 +1356,29 @@ a:hover {
     -o-transition: padding, 0.2s;
     transition: padding, 0.2s;
   }
-  /* line 270, ../scss/custom.scss */
+  /* line 273, ../scss/custom.scss */
   .thumbnail:hover i, .thumbnail:focus i {
     color: black;
   }
 }
 
-/* line 276, ../scss/custom.scss */
+/* line 279, ../scss/custom.scss */
 .thumb-title {
   min-height: 58px;
 }
 @media only all and (max-width: 320px) {
-  /* line 276, ../scss/custom.scss */
+  /* line 279, ../scss/custom.scss */
   .thumb-title {
     min-height: 35px;
   }
 }
 
-/* line 284, ../scss/custom.scss */
+/* line 287, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
 
-/* line 294, ../scss/custom.scss */
+/* line 297, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1380,35 +1386,35 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 300, ../scss/custom.scss */
+/* line 303, ../scss/custom.scss */
 .visit-site {
   margin: 40px 0;
 }
 
-/* line 304, ../scss/custom.scss */
+/* line 307, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 309, ../scss/custom.scss */
+/* line 312, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 304, ../scss/custom.scss */
+  /* line 307, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 304, ../scss/custom.scss */
+  /* line 307, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 321, ../scss/custom.scss */
+/* line 324, ../scss/custom.scss */
 .portfolio-desc {
   padding: 15px 0 45px 0;
 }
@@ -1416,16 +1422,16 @@ a:hover {
 /* 
  *  Soliloquy Slider 
  */
-/* line 330, ../scss/custom.scss */
+/* line 333, ../scss/custom.scss */
 .soliloquy-container img {
   width: 100%;
   height: auto;
 }
-/* line 334, ../scss/custom.scss */
+/* line 337, ../scss/custom.scss */
 .soliloquy-container .soliloquy-direction-nav {
   display: block !important;
 }
-/* line 337, ../scss/custom.scss */
+/* line 340, ../scss/custom.scss */
 .soliloquy-container .soliloquy-control-nav, .soliloquy-container .soliloquy-prev, .soliloquy-container .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1434,7 +1440,7 @@ a:hover {
   -o-transition: opacity, 0.5s;
   transition: opacity, 0.5s;
 }
-/* line 342, ../scss/custom.scss */
+/* line 345, ../scss/custom.scss */
 .soliloquy-container:hover .soliloquy-control-nav, .soliloquy-container:hover .soliloquy-prev, .soliloquy-container:hover .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1444,7 +1450,7 @@ a:hover {
   transition: opacity, 0.5s;
 }
 
-/* line 349, ../scss/custom.scss */
+/* line 352, ../scss/custom.scss */
 .design-slider {
   margin: 26px 0;
 }
@@ -1453,13 +1459,13 @@ a:hover {
  *  Twitter feed 
  */
 @media only all and (max-width: 991px) {
-  /* line 359, ../scss/custom.scss */
+  /* line 362, ../scss/custom.scss */
   .kmeta {
     font-size: 15px;
   }
 }
 
-/* line 364, ../scss/custom.scss */
+/* line 367, ../scss/custom.scss */
 .ktext {
   line-height: 21px !important;
   margin: 15px 0 !important;
@@ -1469,17 +1475,17 @@ a:hover {
 /* 
  *  Contact Form 
  */
-/* line 376, ../scss/custom.scss */
+/* line 379, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 379, ../scss/custom.scss */
+/* line 382, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
   color: #bf7485;
 }
 
-/* line 385, ../scss/custom.scss */
+/* line 388, ../scss/custom.scss */
 #frmCSCF .btn {
   border: #b12e4f;
   background-color: #b12e4f;
@@ -1489,7 +1495,7 @@ a:hover {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 390, ../scss/custom.scss */
+/* line 393, ../scss/custom.scss */
 #frmCSCF .btn:hover {
   background-color: #bf7485;
   -webkit-transition: background-color, 0.25s;
@@ -1501,126 +1507,126 @@ a:hover {
 /* 
  *  Media Queries thumbs
  */
-/* line 401, ../scss/custom.scss */
+/* line 404, ../scss/custom.scss */
 .mq-list {
   padding-bottom: 20px;
 }
-/* line 403, ../scss/custom.scss */
+/* line 406, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 403, ../scss/custom.scss */
+  /* line 406, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 403, ../scss/custom.scss */
+  /* line 406, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 403, ../scss/custom.scss */
+  /* line 406, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 418, ../scss/custom.scss */
+/* line 421, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 418, ../scss/custom.scss */
+  /* line 421, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 418, ../scss/custom.scss */
+  /* line 421, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 427, ../scss/custom.scss */
+/* line 430, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 427, ../scss/custom.scss */
+  /* line 430, ../scss/custom.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 433, ../scss/custom.scss */
+/* line 436, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 436, ../scss/custom.scss */
+/* line 439, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
 }
 
-/* line 442, ../scss/custom.scss */
+/* line 445, ../scss/custom.scss */
 .entry-content {
   padding: 15px 3px;
 }
-/* line 444, ../scss/custom.scss */
+/* line 447, ../scss/custom.scss */
 .entry-content p {
   margin-bottom: 15px;
   text-shadow: 0px 2px 3px black;
 }
 @media only all and (max-width: 991px) {
-  /* line 444, ../scss/custom.scss */
+  /* line 447, ../scss/custom.scss */
   .entry-content p {
     font-size: 15px;
     line-height: 21px;
   }
 }
-/* line 452, ../scss/custom.scss */
+/* line 455, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 459, ../scss/custom.scss */
+/* line 462, ../scss/custom.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 465, ../scss/custom.scss */
+  /* line 468, ../scss/custom.scss */
   .credits td {
     padding: 1px !important;
   }
 }
 
-/* line 471, ../scss/custom.scss */
+/* line 474, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 475, ../scss/custom.scss */
+/* line 478, ../scss/custom.scss */
 .media p {
   margin: 0;
 }
-/* line 478, ../scss/custom.scss */
+/* line 481, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
-/* line 482, ../scss/custom.scss */
+/* line 485, ../scss/custom.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 487, ../scss/custom.scss */
+/* line 490, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
 
-/* line 493, ../scss/custom.scss */
+/* line 496, ../scss/custom.scss */
 .hero-right {
   margin-top: 21px;
   margin-bottom: 40px;
@@ -1631,41 +1637,41 @@ a:hover {
   border-radius: 10px;
 }
 @media only all and (max-width: 767px) {
-  /* line 493, ../scss/custom.scss */
+  /* line 496, ../scss/custom.scss */
   .hero-right {
     margin-bottom: 0;
   }
 }
 
-/* line 502, ../scss/custom.scss */
+/* line 505, ../scss/custom.scss */
 .col-page-left {
   padding: 0 10px 0 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 502, ../scss/custom.scss */
+  /* line 505, ../scss/custom.scss */
   .col-page-left {
     padding: 0;
   }
 }
 
-/* line 511, ../scss/custom.scss */
+/* line 514, ../scss/custom.scss */
 .above-header {
   overflow: visible;
   height: 500px;
 }
 @media only all and (max-width: 767px) {
-  /* line 511, ../scss/custom.scss */
+  /* line 514, ../scss/custom.scss */
   .above-header {
     height: 190px;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 511, ../scss/custom.scss */
+  /* line 514, ../scss/custom.scss */
   .above-header {
     height: 134px;
   }
 }
-/* line 522, ../scss/custom.scss */
+/* line 525, ../scss/custom.scss */
 .above-header h1 {
   margin-top: 30px;
   font-size: 75px;
@@ -1675,20 +1681,20 @@ a:hover {
   padding: 15px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 522, ../scss/custom.scss */
+  /* line 525, ../scss/custom.scss */
   .above-header h1 {
     font-size: 65px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 522, ../scss/custom.scss */
+  /* line 525, ../scss/custom.scss */
   .above-header h1 {
     font-size: 49px;
     top: 155px !important;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 522, ../scss/custom.scss */
+  /* line 525, ../scss/custom.scss */
   .above-header h1 {
     font-size: 32px;
     margin-left: 0;
@@ -1699,13 +1705,13 @@ a:hover {
   }
 }
 
-/* line 548, ../scss/custom.scss */
+/* line 551, ../scss/custom.scss */
 #above-header-container {
   height: 100%;
   position: relative;
 }
 
-/* line 556, ../scss/custom.scss */
+/* line 559, ../scss/custom.scss */
 #cherry-blossoms {
   width: 100%;
   height: auto;
@@ -1714,13 +1720,13 @@ a:hover {
   z-index: 21;
 }
 
-/* line 564, ../scss/custom.scss */
+/* line 567, ../scss/custom.scss */
 .page-id-21 #cherry-blossoms {
   z-index: 999;
 }
 
 @media only all and (max-width: 767px) {
-  /* line 569, ../scss/custom.scss */
+  /* line 572, ../scss/custom.scss */
   #cb-a, .home #cb-a, .blog #cb-a {
     height: 1100px;
     width: 930px !important;
@@ -1729,14 +1735,14 @@ a:hover {
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 569, ../scss/custom.scss */
+  /* line 572, ../scss/custom.scss */
   #cb-a, .home #cb-a, .blog #cb-a {
     width: 560px !important;
     background-position: -176px -110px !important;
   }
 }
 
-/* line 582, ../scss/custom.scss */
+/* line 585, ../scss/custom.scss */
 #cb-a {
   background: url('/wp-content/themes/jn-wpbs/assets/img/cherry-blossom-shadow.png?1389436022');
   background-position: -162px 50px;
@@ -1745,65 +1751,65 @@ a:hover {
   width: 100%;
 }
 @media only all and (max-width: 1199px) {
-  /* line 582, ../scss/custom.scss */
+  /* line 585, ../scss/custom.scss */
   #cb-a {
     background-position: -370px 50px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 582, ../scss/custom.scss */
+  /* line 585, ../scss/custom.scss */
   #cb-a {
     background-position: -490px 50px;
   }
 }
 
-/* line 601, ../scss/custom.scss */
+/* line 604, ../scss/custom.scss */
 .home #cb-a {
   background-position: -550px 13px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 601, ../scss/custom.scss */
+  /* line 604, ../scss/custom.scss */
   .home #cb-a {
     background-position: -650px 20px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 601, ../scss/custom.scss */
+  /* line 604, ../scss/custom.scss */
   .home #cb-a {
     background-position: -750px 20px;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 601, ../scss/custom.scss */
+  /* line 604, ../scss/custom.scss */
   .home #cb-a {
     width: 740px !important;
     background-position: -276px -90px !important;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 617, ../scss/custom.scss */
+  /* line 620, ../scss/custom.scss */
   .home .entry-content {
     padding: 0;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 617, ../scss/custom.scss */
+  /* line 620, ../scss/custom.scss */
   .home .entry-content {
     margin-top: -15px;
   }
 }
-/* line 625, ../scss/custom.scss */
+/* line 628, ../scss/custom.scss */
 .home .main-content-inner span {
   color: #bf7485;
 }
 @media only all and (max-width: 479px) {
-  /* line 628, ../scss/custom.scss */
+  /* line 631, ../scss/custom.scss */
   .home .above-header {
     height: 285px;
   }
 }
 
-/* line 637, ../scss/custom.scss */
+/* line 640, ../scss/custom.scss */
 .blog #cb-a {
   background-position: 70% -84px;
 }
@@ -1811,7 +1817,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 647, ../scss/custom.scss */
+/* line 650, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
